2006-08-26  Bas Wijnen <shevek@fmf.nl>
	* common/network.h, common/state.c, common/state.h, common/network.c,
	server/player.c, server/admin.c: Send keepalive packets when
	connection is idle, and disconnect when no reply is received.
	* client/gtk/player.c: Don't beep for players which are seen during
	connecting.
	* client/gtk/trade.c, client/gtk/quote-view.c,
	client/gtk/quote-view.h: Show maritime trades only when they match the
	supply, or no supply is specified.

2006-08-21  Bas Wijnen <shevek@fmf.nl>
	* common/gtk/config-gnome.c: Added include file.
	* server/gold.c, client/callback.h, client/common/client.c,
	client/ai/greedy.c: Notify players when resources are not distributed
	due to empty bank.

2006-08-17  Roland Clobus <rclobus@bigfoot.com>
	* server/player.c: Use ERR as prefix when too many connections are
	made.
	* server/gtk/main.c, server/server.c, server/server.h, server/main.c,
	server/admin.c: No global GameParams object. Added --file to
	server-console.
	* docs/README.game, common/buildrec.h, common/map_query.c,
	common/game.c, common/game.h, common/map.h, common/buildrec.c,
	server/turn.c, server/conquest.game, server/conquest+ports.game,
	server/player.c, server/server.h, server/pregame.c,
	server/four-islands.game, server/buildutil.c, client/callback.h,
	client/gtk/callbacks.c, client/gtk/frontend.h, client/gtk/player.c,
	client/gtk/settingscreen.c, client/common/client.c,
	client/common/build.c, client/common/client.h, client/common/player.c:
	Added island-discovery-bonus keyword.
	
2006-08-17  Bas Wijnen <shevek@fmf.nl>
	* AUTHORS, editor/gtk/editor.c: Show full authorlist in editor's
	help->about, and add Brian to the full list.

2006-08-15  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/connect.c: Don't connect to a new game at the meta server
	as a viewer.
	* common/network.h, common/log.c, common/network.c, README.subversion,
	configure.ac, server/gtk/main.c, server/main.c,