@@ -1,3 +1,6 @@
+2008-08-26  Roland Clobus <rclobus@bigfoot.com>
+	* client/ai/lobbybot.c: Make it build with gcc-2.95 again.
+	
 2006-08-26  Bas Wijnen <shevek@fmf.nl>
 	* common/network.h, common/state.c, common/state.h, common/network.c,
 	server/player.c, server/admin.c: Send keepalive packets when
